# lancedb

python/pyhologres/: README.md  pyproject.toml
python/pyhologres/examples/: async_example.py  basic_usage.py  cloud_example.py  embedding_example.py
python/pyhologres/python/pyhologres/: __init__.py  common.py  db.py  query.py  schema.py  table.py
python/pyhologres/python/pyhologres/embeddings/: __init__.py  base.py
python/pyhologres/python/pyhologres/remote/: __init__.py  client.py  db.py  table.py
python/pyhologres/tests/: test_basic.py
