[project]
name = "pyhologres"
version = "0.1.0"
dependencies = [
    "deprecation",
    "numpy",
    "overrides>=0.7",
    "packaging",
    "pyarrow>=16",
    "pydantic>=1.10",
    "tqdm>=4.27.0",
    "psycopg2-binary",
    "sqlalchemy>=2.0",
    "asyncpg",
    "aiohttp",
]
description = "Python client for Hologres with LanceDB-compatible API"
authors = [{ name = "Hologres Devs", email = "dev@hologres.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "hologres",
    "data-format",
    "data-science",
    "machine-learning",
    "arrow",
    "data-analytics",
    "vector-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
repository = "https://github.com/hologres/pyhologres"

[project.optional-dependencies]
tests = [
    "aiohttp",
    "pandas>=1.4",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytz",
    "polars>=0.19, <=1.3.0",
    "pyarrow-stubs",
    "requests",
]
dev = [
    "ruff",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
include = ["pyhologres*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88